@@ -3,7 +3,7 @@
 <li id="image_{ID}" class="{STATUS}" style="display : {DISPLAY}; {HIGHLIGHT}">
    {THUMBNAIL}
    <p class="dimensions">
-   {VIEW} {EDIT}
+   {VIEW} {EDIT} {DELETE}<br />
    {WIDTH} x {HEIGHT}
    </p>
 </li>
